--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
@@ -155,6 +155,7 @@
 
 @code{
 
+    private int _lastIndex;
     [Parameter] public int PageIndex { get; set; } = 1;
     private int _totalCount;
     private int _pageSize = 20;
@@ -164,10 +165,11 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        if (_isFirst) return;
+        if (_isFirst && _lastIndex == PageIndex) return;
         _isFirst = true;
 
         if (PageIndex < 1) PageIndex = 1;
+        _lastIndex = PageIndex;
         await GetList();
     }
     
