--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
@@ -148,6 +148,7 @@
 
 @code{
 
+    private int _lastIndex;
     [Parameter] public int PageIndex { get; set; } = 1;
     private int _totalCount;
     private int _pageSize = 20;
@@ -157,10 +158,11 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        if (_isFirst) return;
+        if (_isFirst && _lastIndex == PageIndex) return;
         _isFirst = true;
 
         if (PageIndex < 1) PageIndex = 1;
+        _lastIndex = PageIndex;
         _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount)??new();
     }
 
