--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/List.razor
@@ -173,9 +173,11 @@
 
 @code{
 
+    private int _lastIndex;
     private long _totalCount;
     private int _pageSize = 20;
     [Parameter] public int PageIndex { get; set; }
+    private bool _isFirst;
     private List<LinkTrackContextPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
@@ -186,6 +188,12 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        if (_isFirst && _lastIndex == PageIndex) return;
+        _isFirst = true;
+
+        if (PageIndex < 1) PageIndex = 1;
+        _lastIndex = PageIndex;
+        
         _lstAppId = await _iocManager.Resolve<IProjectService>().ToAppListAsync() ?? new();
         GetList();
     }
