在构建日志中，重新构建时，需要重新初始化变量

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/Log.razor
@@ -74,7 +74,7 @@
 
     private BuildVO _info = new();
     private ProjectVO _projectInfo = new();
-    private string[] _lstLog = new string[0];
+    private string[] _lstLog = Array.Empty<string>();
     private Timer _timer;
     private bool _isFirst;
 
@@ -90,7 +90,7 @@
                 _info = await _iocManager.Resolve<IBuildService>().ToInfoAsync(Id);
                 if (_info == null)
                 {
-                    await js.InvokeVoidAsync("layer.alert", "构建队列不存在", new {icon = 2, title = "出错了"});
+                    await js.InvokeVoidAsync("layer.alert", "构建队列不存在", new { icon = 2, title = "出错了" });
                     GotoList();
                     return;
                 }
@@ -154,11 +154,13 @@
     /// 构建
     private async Task AddBuild()
     {
+        _isFirst = true;
+        _lstLog = Array.Empty<string>();
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         try
         {
             Id = await _iocManager.Resolve<IBuildService>().Add(_info.ProjectId, _info.ClusterId);
-            await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
+            await js.InvokeVoidAsync("layer.msg", "已加入到队列", new { icon = 1, title = "执行结果" });
             _isFirst = false;
             nav.NavigateTo($"/builder/log/{Id}");
             await OnParametersSetAsync();
@@ -166,7 +168,7 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "加入失败"});
+            await js.InvokeVoidAsync("layer.alert", e.Message, new { icon = 2, title = "加入失败" });
         }
         await js.InvokeVoidAsync("layer.close", load);
     }
