--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -207,7 +207,7 @@
     private async Task GetList()
     {
         Console.WriteLine("GetList");
-        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAsync() ?? new();
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListInCacheAsync() ?? new();
         _lst = _lst.OrderBy(o => o.JobName).ThenByDescending(o => o.Id).ToList();
 
     // 取出JobName
